[metadata]
name = autoesv
version = 1.0.0
author = Michiel Sikma
author-email = michiel@sikma.org
home-page = https://github.com/msikma/autoesv
description = Moves .pk6 and .pk7 files to subdirectories based on their ESV
license = MIT
platform = any
keywords = Pokémon, pk6, pk7
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
	Programming Language :: Python :: 3.0

[options]
zip_safe = true
include_package_data = true
python_requires = >= 3.0.*
